--- a/composer.json
+++ b/composer.json
@@ -1,18 +1,17 @@
 {
-    "name": "laravel-zero/laravel-zero",
-    "description": "The Laravel Zero Framework.",
-    "keywords": ["framework", "laravel", "laravel zero", "console", "cli"],
-    "homepage": "https://laravel-zero.com",
-    "type": "project",
+    "name": "pyaesoneaung/ssh-prompts",
+    "description": "SSH CLI Client Built with Laravel Prompts and Laravel Zero",
+    "keywords": ["pyaesoneaung", "ssh", "laravel zero", "laravel prompts", "cli"],
+    "homepage": "https://github.com/PyaeSoneAungRgn/ssh-prompts",
     "license": "MIT",
     "support": {
-        "issues": "https://github.com/laravel-zero/laravel-zero/issues",
-        "source": "https://github.com/laravel-zero/laravel-zero"
+        "issues": "https://github.com/PyaeSoneAungRgn/ssh-prompts/issues",
+        "source": "https://github.com/PyaeSoneAungRgn/ssh-prompts"
     },
     "authors": [
         {
-            "name": "Nuno Maduro",
-            "email": "enunomaduro@gmail.com"
+            "name": "Pyae Sone Aung",
+            "email": "pyaesoneaungrgn@gmail.com"
         }
     ],
     "require": {
