--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "pyaesoneaung/ssh-prompts",
-    "description": "SSH CLI Client Built with Laravel Prompts and Laravel Zero",
+    "description": "SSH Prompts Built with Laravel Prompts and Laravel Zero",
     "keywords": ["pyaesoneaung", "ssh", "laravel zero", "laravel prompts", "cli"],
     "homepage": "https://github.com/PyaeSoneAungRgn/ssh-prompts",
     "license": "MIT",
