--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
     ],
     "require": {
         "php": "^8.1",
+        "laminas/laminas-text": "^2.5",
         "laravel/prompts": "^0.1.0",
         "nunomaduro/termwind": "^1.15.1"
     },
