--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
     "description": "SSH account management cli tool developed with Laravel Prompts and Laravel Zero",
     "keywords": ["pyaesoneaung", "ssh", "laravel zero", "laravel prompts", "cli"],
     "homepage": "https://github.com/PyaeSoneAungRgn/ssh-prompts",
+    "type": "project",
     "license": "MIT",
     "support": {
         "issues": "https://github.com/PyaeSoneAungRgn/ssh-prompts/issues",
@@ -17,7 +18,7 @@
     "require": {
         "php": "^8.1",
         "laminas/laminas-text": "^2.5",
-        "laravel/prompts": "^0.1.3",
+        "laravel/prompts": "^0.1.4",
         "nunomaduro/termwind": "^1.15.1"
     },
     "require-dev": {
